修改弹窗和进度条颜色

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -357,3 +357,7 @@ tbody td:last-child {
 .cursor {
   cursor: pointer;
 }
+
+:where(.css-dev-only-do-not-override-1p3hq3p).ant-progress.ant-progress-circle .ant-progress-text {
+  color: #fff;
+}
