--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 body {
   margin: 0;
   /* display: flex; */
@@ -24,7 +25,7 @@ body {
   box-sizing: border-box;
 }
 
-@font-face {
+/* @font-face {
   font-family: 'Figtree';
   src: url('./assets/fonts/Figtree-VariableFont_wght.ttf') format('ttf');
   src: url('./assets/fonts/Figtree-VariableFont_wght.woff') format('woff');
@@ -40,11 +41,13 @@ body {
   src: url('./assets/fonts/Figtree-Italic-VariableFont_wght.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
-}
+} */
 
 @font-face {
   font-family: 'IBM Plex Sans';
-  src:url('./assets/fonts/IBMPlexSans-Medium.ttf') format('ttf');
+  src: url('./assets/fonts/IBMPlexSans-Medium.ttf') format('ttf');
+  src: url('./assets/fonts/IBMPlexSans-Medium.woff') format('woff');
+  src: url('./assets/fonts/IBMPlexSans-Medium.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
 }
