--- a/src/style.css
+++ b/src/style.css
@@ -52,6 +52,15 @@ body {
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'IBM Plex Sans Regular';
+  src: url('./assets/fonts/IBMPlexSans-Regular.ttf') format('ttf');
+  src: url('./assets/fonts/IBMPlexSans-Regular.woff') format('woff');
+  src: url('./assets/fonts/IBMPlexSans-Regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
 
 p,
 span,
